--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "storefront-front-end",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.11.3",
+    "node": "10.16.3"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "fetch-jsonp": "^1.1.3",
